create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">html site templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -149,7 +149,7 @@
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>
                             Eastern Shore Democrats Newsletter</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           This is your newsletter. We encourage you to connect with us and provide any relevant news, feedback, suggestions, or criticism. Any type of "How To" information is always useful and encouraged. Editorial submissions are encouraged. <a href="feedback.html">Drop us a note</a> outlining your ideas and we will discuss and then add your editorial content to the newsletter. We strongly encourage you to share this newsletters URL with your friends, neighbors and colleagues. Help us get the word out and increase our reach!</p>
+                           This is your newsletter. We encourage you to connect with us and provide any relevent news, feedback, suggestions, or criticism. Any type of "How To" information is always useful and encouraged. Editorial submissions are encouraged. <a href="feedback.html">Drop us a note</a> outlining your ideas and we will discuss and then add your editorial content to the newsletter. We strongly encourage you to share this newsletter URL with your friends, neighbors and colleagues. Help us get the word out and increase our reach!<br><a href="https://easternshoredemocrats.github.io/Newsletter/index.html" target="_blank">https://easternshoredemocrats.github.io/Newsletter/index.html</a><br></p>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>
                             Other Local Groups</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           If you belong to or represent any local organization that also has a political focus we would love to hear from you and will be happy to feature info about your group and what you do to further the political conversation. Working together to leverage our strengths and knowledge benefits everyone. <a href="page5.html">We would be pleased to display links and contact info</a> about your group. So please <a href="feedback.html">contact </a>us.&nbsp;Please work together with us. We want you! We want your skills, your expertise, your passion, and your commitment to help us turn Virginia blue! </p>
+                           If you belong to or represent any local organization that also has a political focus we would love to hear from you and will be happy to feature info about your group and what you do to further the political conversation. Working together to leverage our strengths and knowledge benefits everyone. <a href="page5.html">We would be pleased to display links and contact info</a> about your group if you will&nbsp;<a href="feedback.html">contact </a>us. <br><br>Work together with us. We want you! We want your skills, your expertise, your passion, and your commitment to help us turn Virginia blue! </p>
                     </div>
                 </div>
             </div>
