create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/d">free site maker</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -78,7 +78,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>Northampton County Democratic Comittee shows their support for 2018 mid-term candidates at the Annual Cape Charles Fourth of July Parade</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">The Northampton County Democratic Committee and many of our fellow Eastern Shore Democrats marched in the Annual Cape Charles 4th of July parade to show their support for Senator Tim Kaine and Second Congressional District Democratic Candidate, Elaine Luria. A great time was had by all participating.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">The Northampton County Democratic Committee and many of our fellow Eastern Shore Democrats marched in the Annual Cape Charles 4th of July parade to show their support for Senator Tim Kaine and Second Congressional District Democratic Candidate, Elaine Luria. A great time was had by all participating.<br><br>Next month's newsletter will include a summary of the Northampton meeting. This is the new newsletter editor's initial newsletter and he assumed the duties after the July meeting. But he does plan on attending the Aug. meeting and reporting.<br><br>The next meeting of the Northampton County Democratic Committe is scheduled for 7 pm on Aug. 7 at the&nbsp;Northampton Social Services Building, 5265 The Hornes, Eastville.&nbsp;We encourage everyone to attend the next meeting.</p>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>News from July Accomack County Democratic Committee Meeting</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">This will be where you will find the latest news from the July 11, 2018 meeting of Accomack County Democrats held at the Eastern Shore Chamber of Commerce Building, 19056 Parkway Road, Melfa, VA 23410.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">The Accomack County Democratic Committee held it's July meerting on the 11th at the Eastern Shore Chamber of Comerce Bldg. in Melfa. The County Chair, Parker Dooley, reviewed the minutes from the June meeting and they were approved by those attending. 2nd Chair Debra Wharton gave a summary of the Treasurer's report and announced that the Committee added 40 new members last month. <br><br>Committee 2nd Chair Debra &nbsp;Wharton shared that a Community Voter Registration event was planned for July 15 at St. John's Methodist Church in Atlantic, VA. Dooley, Wharton and Secretary Laurie Chamberlin led a discussion on the Committee's Communication efforts. Discussion included possible billboards, radio spots, the new newsletter, future of website, website, sending letters to the editors at various media outlets and expanding social media reach via Facebook, Twitter and Instagram.<br><br>There was mention of 8 members getting cetified for Voter Registration efforts and the mechanics of the Absentee Ballot process which opens this year on Sept. 24th. <br><br>Ivana Hall, a staffer with the Coordinated Campaign Weekends of Action program, gave an excellent presentation and answered questions about the organization. Expect further information on the Coordinated Campaign effort as they ramp up staffing and formalize the organizational aspects. <br><br>The next meeting of the Committee is at 6 pm on Aug. 1 at the Eastern Shore Chamber of Commerce Building, 19056 Parkway Road, Melfa. We encourage everyone to attend the next meeting.<br></p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <h4 class="card-title py-3 mbr-fonts-style display-7"><strong>
                             Eastern Shore Democrats Newsletter</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           This is your newsletter. We encourage you to connect with us and provide any relevent news, feedback, suggestions, or criticism. Any type of "How To" information is always useful and encouraged. Editorial submissions are encouraged. <a href="feedback.html">Drop us a note</a> outlining your ideas and we will discuss and then add your editorial content to the newsletter. We strongly encourage you to share this newsletter URL with your friends, neighbors and colleagues. Help us get the word out and increase our reach!<br><a href="https://easternshoredemocrats.github.io/Newsletter/index.html" target="_blank">https://easternshoredemocrats.github.io/Newsletter/index.html</a><br></p>
+                           This is your newsletter. We encourage you to connect with us and provide any relevent news, feedback, suggestions, or criticism. Any type of "How To" information is always useful and encouraged. Editorial submissions are encouraged. <a href="feedback.html">Drop us a note</a> outlining your ideas and we will discuss and then add your editorial content to the newsletter. <strong>Please share this newsletter URL with your friends, neighbors and colleagues. Help us get the word out and increase our reach! The URL is: &nbsp;</strong><br><a href="https://easternshoredemocrats.github.io/Newsletter/index.html" target="_blank">https://easternshoredemocrats.github.io/Newsletter/index.html</a><br></p>
                     </div>
                 </div>
             </div>
