--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online web builder</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/g">how to build your own site</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S4m1ZrSoMhCCTWbYis41XWmQ4zUWY3X9lnUHzybBjSzZGB3Z1Fqonxd/X4LA1aLOSmGKVVfcxA6TDpiAX9BTwjQf1e+SFt7//suRRoYrOMIeI+cqcIcWuwduLw6Ody+c" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z5gUmbzklmSZpD7dGAbXZWGMwveN0QlWgjyUiE4LlaEvd3MSTYwUbmrfqXndlErRH9/pyiGh+KG2+FoIVUwX6GnwtBtvoyaw/83NoC1HpqLEL/loo24799y8HoGsN+Hz" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
