--- a/elected.html
+++ b/elected.html
@@ -37,7 +37,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">how to make your own site</a></section><section class="mbr-section content8 cid-qX2vj42gGH" id="content8-11">
+<section class="engine"><a href="https://mobiri.se/f">simple website creator</a></section><section class="mbr-section content8 cid-qX2vj42gGH" id="content8-11">
 
     
 
