--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">free bootstrap theme</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BsnxgymAu6tw/lJjC2zd1zhEhHpa6aYGK0rzOv1uusUcuUw8CF3XS8Bb/MiWBPiBPqiLyAk7MkaLyD4/Vg+PJP/Gqh6cYby06kZfmXLCeXiWFtR+FYvr7zwLCTsK1oX/" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z05UgSNEq4aFU40Pf/r0wld43d4Jo4SgBKaT6bwPjmFuQOenpt/nSC2NUR3K+jNYr0harSKSMaH1IdLQgN/QY2aBHBWYgfX4L/iwGcwotNuAFGQK5ijNRBYLC9U7pWne" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
