--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/i">website creation software</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/h">how to create a web page</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OcN4/w2c9tUbntSOljRL4Ji1gI+RnkQKDSPA6NxQxTkEETmJlP+I2Tim+9wwpjZt+WkxFaTEjO+t5X1/rmw6/01JFJUg/ukzpR7Iu3OTdW+60WaRRhZOE7tN4/tKggjG" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xftdZximv8tj5a1VliwSWK+tWs70V21rlCkmUWyGVJKXC1jHTMb4uzpMSLEpZ18VZ9iDGOWxIZnwPoCTw+tAJAzL7mdhOZaclOKRfJbe0Idw6qUiXxCpqPGwf36/7WRA" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
