create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -590,8 +590,8 @@ or contact  <a href="mailto:Jamie@RalphNortham.com">Jamie@RalphNortham.com</a>&n
                 <p class="mbr-text">Access the <a href="https://www.virginia.gov/services/register-to-vote/" target="_blank">Virginia Department of Elections website </a>to register to vote online, to review your current voter registration status, and/or submit updates to your voter registration.</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">Notice</h5>
-                <p class="mbr-text">Authorized and paid for by the Accomack Countyand Northampton County Democratic Committees<br><br>@ Copyright 2018<br>Eastern Shore Democrats<br>All Rights Reserved</p>
+                <h5 class="pb-3">Notices</h5>
+                <p class="mbr-text">Authorized and paid for by the Accomack County and Northampton County Democratic Committees<br><br>@ Copyright 2018<br>Eastern Shore Democrats<br>All Rights Reserved</p>
             </div>
         </div>
         
