--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">make your own website</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ak1j5Bj9ARpw439uL8sUItCo/OtOOBDwMWSHHESy5Pha2tdoylyxdodwor8kCSBFuhWVWK+flMsDfVx9CLC1oS8hCIbtvEqMwBaKE/WDIdnkFSc+ADIkM6et3CvTapeC" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QAfNCCLLUaIvPBuXglm/QAxc13jsY8gRhrHRlxyo1iz+BtnwWbuLAyGNvcFhLS3iO8LrrLcalALlGfTs6cbNApXcPVYkzdsOr0LvtFqq834Qo3guGb6cTo+tWzNdvXD7" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
