--- a/2018elections.html
+++ b/2018elections.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
+<section class="engine"><a href="https://mobiri.se/p">site templates free download</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
 
     
 
@@ -96,7 +96,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><strong>The Commonwealth of Virginia has a very complicated set of rules and procedures concerning absentee ballots. Anyone desiring to cast an absentee ballot, for any reason, will be well served to read the rules and procedures as outlined on the Virginia Department of Elections webpage which can be found at: &nbsp;<a href="https://www.elections.virginia.gov/casting-a-ballot/absentee-voting/index.html" target="_blank">https://www.elections.virginia.gov/casting-a-ballot/absentee-voting/index.html</a></strong></p><p><strong><br></strong></p><p><strong>It will also be useful to check with the Registrar's&nbsp;</strong></p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>The Commonwealth of Virginia has a very complicated set of rules and procedures concerning absentee ballots. Anyone desiring to cast an absentee ballot, for any reason, will be well served to read the rules and procedures as outlined on the Virginia Department of Elections webpage which can be found at: <strong>&nbsp;<a href="https://www.elections.virginia.gov/casting-a-ballot/absentee-voting/index.html" target="_blank">https://www.elections.virginia.gov/casting-a-ballot/absentee-voting/index.html</a>.&nbsp;</strong><span style="font-size: 1rem;">It may also be useful to check with either the</span><strong> <a href="http://www.co.accomack.va.us/departments/registrar" target="_blank">Accomack County Registrar Office</a>&nbsp;</strong><span style="font-size: 1rem;">or the</span><strong> <a href="http://www.co.northampton.va.us/gov/registrar/" target="_blank">Northampton County Registrar Office</a>.</strong></p></div>
         </div>
     </div>
 </section>
