create github pages

--- a/2018elections.html
+++ b/2018elections.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
+<section class="engine"><a href="https://mobiri.se/s">bootstrap theme</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
 
     
 
@@ -107,7 +107,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-2">Candidates for 2018 Election Videos</div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-2"><strong>Candidates for 2018 Election Videos</strong></div>
         </div>
     </div>
 </section>
