--- a/meetinginfo.html
+++ b/meetinginfo.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="mbr-section content8 cid-qX2sQ3ucKt" id="content8-10">
+<section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><section class="mbr-section content8 cid-qX2sQ3ucKt" id="content8-10">
 
     
 
