create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="cid-r17In2tlnG mbr-fullscreen" id="header2-1l">
+<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="cid-r17In2tlnG mbr-fullscreen" id="header2-1l">
 
     
 
