create github pages

--- a/september_2018.html
+++ b/september_2018.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="cid-r4chIj5kTU mbr-fullscreen" id="header2-4h">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="cid-r4chIj5kTU mbr-fullscreen" id="header2-4h">
 
     
 
