create github pages

--- a/august_2018.html
+++ b/august_2018.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section><section class="cid-r29Ub7HUwo mbr-fullscreen" id="header2-2q">
+<section class="engine"><a href="https://mobiri.se/o">free portfolio site templates</a></section><section class="cid-r29Ub7HUwo mbr-fullscreen" id="header2-2q">
 
     
 
