create github pages

--- a/newsletter.html
+++ b/newsletter.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">how to build your own site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
@@ -134,7 +134,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Thank You To All Of Our Volunteers</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    Your hard work and tireless efforts were essential ingetting people out to vote and wrapping up this big electoral vistory.</h3>
+                    Your hard work and tireless efforts were essential in getting people out to vote and wrapping up this big electoral victory.</h3>
                 
             </div>
         </div>
@@ -149,7 +149,7 @@
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Tuesday, November 6th was a historic day. It was the day that Eastern Shore Democrats realized the fruits of victory after a hard-fought campaign to elect Elaine Luria as our 2nd District Congresswoman and Tim Kaine as our returning Senator.</p><p>
 </p><div>
-</div><div>These victrories were a direct result of all the efforts and hard work by each and everyone of you. 
+</div><div>These victories were a direct result of all the efforts and hard work by each and everyone of you. 
 You richly deserve the accolades and appreciation of us all. Thank you!</div><div><br></div><div>
 </div><div>The Accomack and Northamptom Democratic Committee officers provided great leadership. They coordinated our on the ground phone calling and door knocking efforts with the assistance of paid staffers from the Luria and Kaine campaigns.</div><p></p></div>
         </div>
