--- a/newsletter.html
+++ b/newsletter.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobiri.se/b">how to create a site for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
